lab2/Code/syntax.output
State 28 conflicts: 1 shift/reduce
State 34 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | error RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec
   26        | error COMMA

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC

   29 StmtList: Stmt StmtList
   30         | %empty

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | error SEMI

   38 DefList: Def DefList
   39        | %empty

   40 Def: Specifier DecList SEMI
   41    | error SEMI

   42 DecList: Dec
   43        | Dec COMMA DecList
   44        | error COMMA

   45 Dec: VarDec
   46    | VarDec ASSIGNOP Exp

   47 Exp: Exp ASSIGNOP Exp
   48    | Exp AND Exp
   49    | Exp OR Exp
   50    | Exp RELOP Exp
   51    | Exp PLUS Exp
   52    | Exp MINUS Exp
   53    | Exp STAR Exp
   54    | Exp DIV Exp
   55    | LP Exp RP
   56    | MINUS Exp
   57    | NOT Exp
   58    | ID LP Args RP
   59    | ID LP RP
   60    | Exp LB Exp RB
   61    | Exp DOT ID
   62    | ID
   63    | INT
   64    | FLOAT
   65    | error RP

   66 Args: Exp COMMA Args
   67     | Exp
   68     | error COMMA


Terminals, with rules where they appear

$end (0) 0
error (256) 8 20 23 26 37 41 44 65 68
INT (258) 19 63
FLOAT (259) 64
TYPE (260) 11
IF (261) 34 35
ELSE (262) 35
WHILE (263) 36
STRUCT (264) 13 14
RETURN (265) 33
RELOP (266) 50
LC (267) 13 28
RC (268) 13 28
LB (269) 19 60
RB (270) 19 20 60
LP (271) 21 22 34 35 36 55 58 59
RP (272) 21 22 23 34 35 36 55 58 59 65
COMMA (273) 10 24 26 43 44 66 68
SEMI (274) 4 5 7 8 31 33 37 40 41
ID (275) 15 17 18 21 22 58 59 61 62
ASSIGNOP (276) 46 47
AND (277) 48
OR (278) 49
PLUS (279) 51
MINUS (280) 52 56
STAR (281) 53
DIV (282) 54
NOT (283) 57
DOT (284) 61
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (35)
    on left: 9 10, on right: 4 10
Specifier (36)
    on left: 11 12, on right: 4 5 6 7 27 40
StructSpecifier (37)
    on left: 13 14, on right: 12
OptTag (38)
    on left: 15 16, on right: 13
Tag (39)
    on left: 17, on right: 14
VarDec (40)
    on left: 18 19 20, on right: 9 10 19 27 45 46
FunDec (41)
    on left: 21 22 23, on right: 6 7
VarList (42)
    on left: 24 25 26, on right: 21 24
ParamDec (43)
    on left: 27, on right: 24 25
CompSt (44)
    on left: 28, on right: 6 32
StmtList (45)
    on left: 29 30, on right: 28 29
Stmt (46)
    on left: 31 32 33 34 35 36 37, on right: 29 34 35 36
DefList (47)
    on left: 38 39, on right: 13 28 38
Def (48)
    on left: 40 41, on right: 38
DecList (49)
    on left: 42 43 44, on right: 40 43
Dec (50)
    on left: 45 46, on right: 42 43
Exp (51)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65, on right: 31 33 34 35 36 46 47 48 49 50 51 52 53 54 55 56 57
    60 61 66 67
Args (52)
    on left: 66 67 68, on right: 58 66


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI

    error  shift, and go to state 15
    SEMI   shift, and go to state 16
    ID     shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 11

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   20 VarDec: error . RB
   23 FunDec: error . RP

    RB  shift, and go to state 22
    RP  shift, and go to state 23


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP

    LP  shift, and go to state 24

    $default  reduce using rule 18 (VarDec)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 25


State 19

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB

    LB     shift, and go to state 26
    COMMA  shift, and go to state 27

    $default  reduce using rule 9 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    LC    shift, and go to state 28
    SEMI  shift, and go to state 29

    CompSt  go to state 30


State 21

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 39 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 33
    Def              go to state 34


State 22

   20 VarDec: error RB .

    $default  reduce using rule 20 (VarDec)


State 23

   23 FunDec: error RP .

    $default  reduce using rule 23 (FunDec)


State 24

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP

    error   shift, and go to state 35
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 36

    Specifier        go to state 37
    StructSpecifier  go to state 8
    VarList          go to state 38
    ParamDec         go to state 39


State 25

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 26

   19 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 40


State 27

   10 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 41
    ID     shift, and go to state 42

    ExtDecList  go to state 43
    VarDec      go to state 19


State 28

   28 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 39 (DefList)]
    INT     reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)
    ID      reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 44
    Def              go to state 34


State 29

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 30

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 31

   41 Def: error . SEMI

    SEMI  shift, and go to state 45


State 32

   40 Def: Specifier . DecList SEMI

    error  shift, and go to state 46
    ID     shift, and go to state 42

    VarDec   go to state 47
    DecList  go to state 48
    Dec      go to state 49


State 33

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 50


State 34

   38 DefList: Def . DefList

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 39 (DefList)]
    INT     reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)
    ID      reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 51
    Def              go to state 34


State 35

   26 VarList: error . COMMA

    COMMA  shift, and go to state 52


State 36

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 37

   27 ParamDec: Specifier . VarDec

    error  shift, and go to state 41
    ID     shift, and go to state 42

    VarDec  go to state 53


State 38

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 54


State 39

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 55

    $default  reduce using rule 25 (VarList)


State 40

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 56


State 41

   20 VarDec: error . RB

    RB  shift, and go to state 22


State 42

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 43

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 44

   28 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 57
    INT     shift, and go to state 58
    FLOAT   shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61
    RETURN  shift, and go to state 62
    LC      shift, and go to state 28
    LP      shift, and go to state 63
    ID      shift, and go to state 64
    MINUS   shift, and go to state 65
    NOT     shift, and go to state 66

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 68
    Stmt      go to state 69
    Exp       go to state 70


State 45

   41 Def: error SEMI .

    $default  reduce using rule 41 (Def)


State 46

   20 VarDec: error . RB
   44 DecList: error . COMMA

    RB     shift, and go to state 22
    COMMA  shift, and go to state 71


State 47

   19 VarDec: VarDec . LB INT RB
   45 Dec: VarDec .
   46    | VarDec . ASSIGNOP Exp

    LB        shift, and go to state 26
    ASSIGNOP  shift, and go to state 72

    $default  reduce using rule 45 (Dec)


State 48

   40 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 73


State 49

   42 DecList: Dec .
   43        | Dec . COMMA DecList

    COMMA  shift, and go to state 74

    $default  reduce using rule 42 (DecList)


State 50

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 51

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


State 52

   26 VarList: error COMMA .

    $default  reduce using rule 26 (VarList)


State 53

   19 VarDec: VarDec . LB INT RB
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 27 (ParamDec)


State 54

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 55

   24 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 35
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 37
    StructSpecifier  go to state 8
    VarList          go to state 75
    ParamDec         go to state 39


State 56

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 57

   37 Stmt: error . SEMI
   65 Exp: error . RP

    RP    shift, and go to state 76
    SEMI  shift, and go to state 77


State 58

   63 Exp: INT .

    $default  reduce using rule 63 (Exp)


State 59

   64 Exp: FLOAT .

    $default  reduce using rule 64 (Exp)


State 60

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 78


State 61

   36 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 79


State 62

   33 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 80
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    LP     shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66

    Exp  go to state 81


State 63

   55 Exp: LP . Exp RP

    error  shift, and go to state 80
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    LP     shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66

    Exp  go to state 82


State 64

   58 Exp: ID . LP Args RP
   59    | ID . LP RP
   62    | ID .

    LP  shift, and go to state 83

    $default  reduce using rule 62 (Exp)


State 65

   56 Exp: MINUS . Exp

    error  shift, and go to state 80
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    LP     shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66

    Exp  go to state 84


State 66

   57 Exp: NOT . Exp

    error  shift, and go to state 80
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    LP     shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66

    Exp  go to state 85


State 67

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


State 68

   28 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 86


State 69

   29 StmtList: Stmt . StmtList

    error   shift, and go to state 57
    INT     shift, and go to state 58
    FLOAT   shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61
    RETURN  shift, and go to state 62
    LC      shift, and go to state 28
    LP      shift, and go to state 63
    ID      shift, and go to state 64
    MINUS   shift, and go to state 65
    NOT     shift, and go to state 66

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 87
    Stmt      go to state 69
    Exp       go to state 70


State 70

   31 Stmt: Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    RELOP     shift, and go to state 88
    LB        shift, and go to state 89
    SEMI      shift, and go to state 90
    ASSIGNOP  shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    DOT       shift, and go to state 98


State 71

   44 DecList: error COMMA .

    $default  reduce using rule 44 (DecList)


State 72

   46 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 80
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    LP     shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66

    Exp  go to state 99


State 73

   40 Def: Specifier DecList SEMI .

    $default  reduce using rule 40 (Def)


State 74

   43 DecList: Dec COMMA . DecList

    error  shift, and go to state 46
    ID     shift, and go to state 42

    VarDec   go to state 47
    DecList  go to state 100
    Dec      go to state 49


State 75

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 76

   65 Exp: error RP .

    $default  reduce using rule 65 (Exp)


State 77

   37 Stmt: error SEMI .

    $default  reduce using rule 37 (Stmt)


State 78

   34 Stmt: IF LP . Exp RP Stmt
   35     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 80
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    LP     shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66

    Exp  go to state 101


State 79

   36 Stmt: WHILE LP . Exp RP Stmt

    error  shift, and go to state 80
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    LP     shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66

    Exp  go to state 102


State 80

   65 Exp: error . RP

    RP  shift, and go to state 76


State 81

   33 Stmt: RETURN Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    RELOP     shift, and go to state 88
    LB        shift, and go to state 89
    SEMI      shift, and go to state 103
    ASSIGNOP  shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    DOT       shift, and go to state 98


State 82

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   55    | LP Exp . RP
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
